opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/redis-async"
bug-reports: "https://github.com/janestreet/redis-async/issues"
dev-repo: "git+https://github.com/janestreet/redis-async.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/redis-async/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "4.08.0"}
  "async"       {>= "v0.15" & < "v0.16"}
  "bignum"      {>= "v0.15" & < "v0.16"}
  "core"        {>= "v0.15" & < "v0.16"}
  "core_kernel" {>= "v0.15" & < "v0.16"}
  "ppx_jane"    {>= "v0.15" & < "v0.16"}
  "dune"        {>= "2.0.0"}
]
synopsis: "Redis client for Async applications"
description: "
A client library for Redis versions 6 and higher.

Provides a strongly-typed API with transparent (de)serialization for application-defined
types.

Supports client tracking and internally uses the RESP3 protocol. 
"
